--- a/ref/msal-node/classes/_src_client_publicclientapplication_.publicclientapplication.html
+++ b/ref/msal-node/classes/_src_client_publicclientapplication_.publicclientapplication.html
@@ -132,7 +132,7 @@
 								<div class="lead">
 									<p>Important attributes in the Configuration object for auth are:</p>
 									<ul>
-										<li>clientID: the application ID of your application. You can obtain one by registering your application with our Application registration portal</li>
+										<li>clientID: the application ID of your application. You can obtain one by registering your application with our Application registration portal.</li>
 										<li>authority: the authority URL for your application.</li>
 									</ul>
 								</div>
@@ -143,7 +143,7 @@
 								To restrict support to Personal Microsoft accounts only, replace &quot;Enter_the_Tenant_Info_Here&quot; value with consumers.</p>
 								<p>Azure B2C authorities are of the form https://{instance}/{tenant}/{policy}. Each policy is considered
 									it&#39;s own authority. You will have to set the all of the knownAuthorities at the time of the client application
-								construction</p>
+								construction.</p>
 								<p>ADFS authorities are of the form https://{instance}/adfs</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -186,8 +186,6 @@
 							<ul class="tsd-parameters">
 								<li>
 									<h5>request: <a href="../modules/_src_index_.html#authorizationcoderequest" class="tsd-signature-type">AuthorizationCodeRequest</a></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">AuthenticationResult</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -254,8 +252,6 @@
 							<ul class="tsd-parameters">
 								<li>
 									<h5>request: <a href="../modules/_src_index_.html#refreshtokenrequest" class="tsd-signature-type">RefreshTokenRequest</a></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">AuthenticationResult</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -283,14 +279,12 @@
 								<p>This API expects the user to provide an account object and looks into the cache to retrieve the token if present.
 									There is also an optional &quot;forceRefresh&quot; boolean the user can send, to bypass the cache for access_token and id_token
 									In case the refresh_token is expired or not found, an error is thrown
-								and the guidance is for the user to call any interactive token acquisition API (eg: acquireTokenByCode())</p>
+								and the guidance is for the user to call any interactive token acquisition API (eg: acquireTokenByCode()).</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>request: <span class="tsd-signature-type">SilentFlowRequest</span></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">AuthenticationResult</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -319,14 +313,12 @@
 								</div>
 								<p>Once the user inputs their credentials and consents, the authority will send a response to the redirect URI
 									sent in the request and should contain an authorization code, which can then be used to acquire tokens via
-								acquireToken(AuthorizationCodeRequest)</p>
+								acquireToken(AuthorizationCodeRequest).</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>request: <span class="tsd-signature-type">AuthorizationUrlRequest</span></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -349,7 +341,7 @@
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Gets the cache manager for the application</p>
+									<p>Gets the cache manager for the application.</p>
 								</div>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="_src_cache_tokencache_.tokencache.html" class="tsd-signature-type">TokenCache</a></h4>
