--- a/ref/msal-node/classes/_src_client_clientapplication_.clientapplication.html
+++ b/ref/msal-node/classes/_src_client_clientapplication_.clientapplication.html
@@ -109,7 +109,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L88">src/client/ClientApplication.ts:88</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L84">src/client/ClientApplication.ts:84</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -117,7 +117,7 @@
 									<p>Acquires a token by exchanging the Authorization Code received from the first step of OAuth2.0
 									Authorization Code flow.</p>
 								</div>
-								<p>getAuthCodeUrl(AuthorizationCodeUrlRequest) can be used to create the URL for the first step of OAuth2.0
+								<p><code>getAuthCodeUrl(AuthorizationCodeUrlRequest)</code> can be used to create the URL for the first step of OAuth2.0
 									Authorization Code flow. Ensure that values for redirectUri and scopes in AuthorizationCodeUrlRequest and
 								AuthorizationCodeRequest are the same.</p>
 							</div>
@@ -141,15 +141,15 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L108">src/client/ClientApplication.ts:108</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L103">src/client/ClientApplication.ts:103</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Acquires a token by exchanging the refresh token provided for a new set of tokens.</p>
 								</div>
-								<p>This API is provided only for scenarios where you would like to migrate from ADAL to MSAL. Instead, it is
-									recommended that you use acquireTokenSilent() for silent scenarios. When using acquireTokenSilent, MSAL will
+								<p>This API is provided only for scenarios where you would like to migrate from ADAL to MSAL. Otherwise, it is
+									recommended that you use <code>acquireTokenSilent()</code> for silent scenarios. When using <code>acquireTokenSilent()</code>, MSAL will
 								handle the caching and refreshing of tokens automatically.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -172,7 +172,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L129">src/client/ClientApplication.ts:129</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L123">src/client/ClientApplication.ts:123</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -180,9 +180,9 @@
 									<p>Acquires a token silently when a user specifies the account the token is requested for.</p>
 								</div>
 								<p>This API expects the user to provide an account object and looks into the cache to retrieve the token if present.
-									There is also an optional &quot;forceRefresh&quot; boolean the user can send, to bypass the cache for access_token and id_token
+									There is also an optional &quot;forceRefresh&quot; boolean the user can send to bypass the cache for access_token and id_token.
 									In case the refresh_token is expired or not found, an error is thrown
-								and the guidance is for the user to call any interactive token acquisition API (eg: acquireTokenByCode()).</p>
+								and the guidance is for the user to call any interactive token acquisition API (eg: <code>acquireTokenByCode()</code>).</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -204,18 +204,18 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L66">src/client/ClientApplication.ts:66</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L64">src/client/ClientApplication.ts:64</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Creates the URL of the authorization request letting the user input credentials and consent to the
-										application. The URL target the /authorize endpoint of the authority configured in the
+									<p>Creates the URL of the authorization request, letting the user input credentials and consent to the
+										application. The URL targets the /authorize endpoint of the authority configured in the
 									application object.</p>
 								</div>
 								<p>Once the user inputs their credentials and consents, the authority will send a response to the redirect URI
 									sent in the request and should contain an authorization code, which can then be used to acquire tokens via
-								acquireToken(AuthorizationCodeRequest).</p>
+								<code>acquireTokenByCode(AuthorizationCodeRequest)</code>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -237,7 +237,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L142">src/client/ClientApplication.ts:142</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/client/ClientApplication.ts#L136">src/client/ClientApplication.ts:136</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
